# cups2mqtt

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: pr-ci-app-docker.yml  release-docker.yml
src/: cli.rs  main.rs
src/config/: loading.rs  mod.rs  models.rs  schedule.rs
src/cups_client/: client.rs  models.rs
src/ipp_client/: client.rs
src/mqtt_client/: client.rs  fun_with_tls.rs  mod.rs  models.rs
