[package]
name = "cups2mqtt"
version = "0.3.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
ipp = { version = "5.3.1", features = ["async-client-tls", "serde"]}
rumqttc = "0.24.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
chrono = "0.4.42"
sentry = "0.42.0"
config = "0.15.15"
dotenv-flow = "0.16.2"
url = "2.5.4"
backon = "1.5.2"
log = "0.4.28"
colog = "1.3.0"
rustls-native-certs = "0.8.1"
convert_case = "0.8.0"
dashmap = "6.1.0"
snafu = "0.8.9"
humantime = "2.2.0"
tokio = { version = "1.47.1", features = ["full"] }
croner = "3.0.0"
ron = "0.11.0"
