[package]
name = "cups2mqtt"
version = "0.3.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ipp = { version = "5.3.2", features = ["async-client-tls", "serde"]}
rumqttc = "0.25.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
sentry = "0.46.0"
config = "0.15.19"
dotenv-flow = "0.16.2"
url = "2.5.7"
backon = "1.6.0"
log = "0.4.28"
colog = "1.4.0"
rustls-native-certs = "0.8.2"
convert_case = "0.10.0"
dashmap = "6.1.0"
snafu = "0.8.9"
humantime = "2.3.0"
tokio = { version = "1.48.0", features = ["full"] }
croner = "3.0.1"
ron = "0.12.0"
